# crumble

./: .gitmodules  BENCHMARKS_chr20  INSTALL  LICENSE.md  Makefile  Makefile.am  README.md  README.methods  bed.c  bed.h  compare_vcf.sh  configure.ac  crumble.1  indel_only.c  pipeline.sh  snp_score.c  str_finder.c  str_finder.h
misc/: compare_vcf.sh
